# carla

./: .gitignore  dual_filter_architecture.md  final.ino  howtorun.md  real_car_spec.md
PythonAPI/blender/: SK_car_1_5_awd.fbx  SM_sc_car_1_5_awd.fbx  blender.py  car_generated.blend  car_generated.blend1
PythonAPI/examples/: manual_control.py
PythonAPI/examples/ros2/: ros2_native.py  stack.json
PythonAPI/examples/ros2/rviz/: ros2_native.rviz
PythonAPI/examples/ros2_sensor/: ros2_sensor.py  run_rviz.sh  stack.json
PythonAPI/examples/ros2_sensor/rviz/: ros2_sensor.rviz
mppi/: .gitignore
mppi/src/dual_filter/: package.xml  setup.cfg  setup.py
mppi/src/dual_filter/config/: ekf_params.yaml
mppi/src/dual_filter/dual_filter/: odom_path_publisher.py  utm_to_odometry.py
mppi/src/dual_filter/launch/: dual_filter.launch.py
mppi/src/gnss_to_utm/: CMakeLists.txt  Readme.md  package.xml
mppi/src/gnss_to_utm/config/: tf_gnss_csv.yaml
mppi/src/gnss_to_utm/launch/: tf.rviz  tf_gnss_csv.launch.py  total.launch.py
mppi/src/gnss_to_utm/src/: azimuth_angle_calculator.cpp  f9p_to_csv.py.txt  f9p_to_utm.cpp  f9r_to_csv.py  f9r_to_utm.cpp  tf_gnss_csv.cpp
mppi/src/serial_bridge/: package.xml
mppi/src/serial_bridge/serial_bridge/: serial_bridge.py
